# fastapi_rust

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BEAD_REVIEW.md  Cargo.toml  EXISTING_FASTAPI_STRUCTURE.md  PLAN_TO_PORT_FASTAPI_TO_RUST.md  PROPOSED_RUST_ARCHITECTURE.md  README.md  UPGRADE_LOG.md
.beads/: config.yaml  issues.jsonl  issues.jsonl.bak
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  nightly.yml  release.yml
crates/fastapi/: Cargo.toml
crates/fastapi-core/: Cargo.toml
crates/fastapi-core/src/: api_router.rs  app.rs  bench.rs  context.rs  coverage.rs  dependency.rs  digest.rs  docs.rs  error.rs  extract.rs  fault.rs  fixtures.rs  health.rs  lib.rs  loadtest.rs  logging.rs  middleware.rs  multipart.rs  ndjson.rs  password.rs  proptest.rs  request.rs  response.rs  routing.rs  shutdown.rs  sse.rs  static_files.rs  testing.rs  validation.rs  versioning.rs  websocket.rs
crates/fastapi-core/tests/: integration_tests.rs  response_handling.rs  validate_derive.rs
crates/fastapi-http/: Cargo.toml
crates/fastapi-http/benches/: http_parser.rs
crates/fastapi-http/src/: connection.rs  expect.rs  http2.rs  lib.rs  multipart.rs  parser.rs  range.rs  response.rs  server.rs  streaming.rs  websocket.rs
crates/fastapi-http/tests/: http2.rs  security.rs  websocket.rs
crates/fastapi-macros/: Cargo.toml
crates/fastapi-macros/src/: lib.rs  openapi.rs  param.rs  response_model.rs  route.rs  validate.rs
crates/fastapi-openapi/: Cargo.toml
crates/fastapi-openapi/src/: lib.rs  schema.rs  spec.rs
crates/fastapi-openapi/tests/: enum_schema.rs  openapi_generation.rs
crates/fastapi-output/: Cargo.toml
crates/fastapi-output/src/: detection.rs  facade.rs  lib.rs  mode.rs  themes.rs
crates/fastapi-output/src/components/: banner.rs  errors.rs  help_display.rs  logging.rs  middleware_stack.rs  mod.rs  openapi_display.rs  routes.rs
crates/fastapi-output/tests/: e2e_agent_detection.rs  e2e_component_integration.rs  integration_app_lifecycle.rs  snapshot_tests.rs
crates/fastapi-output/tests/snapshots/: snapshot_tests__banner_minimal.snap  snapshot_tests__banner_plain.snap  snapshot_tests__banner_rich_content.snap  snapshot_tests__dependency_tree.snap  snapshot_tests__http_error_401.snap  snapshot_tests__http_error_404.snap  snapshot_tests__http_error_422.snap  snapshot_tests__http_error_500.snap  snapshot_tests__middleware_stack.snap  snapshot_tests__request_log_basic.snap  snapshot_tests__request_log_error.snap  snapshot_tests__request_log_full.snap  snapshot_tests__routes_table_basic.snap  snapshot_tests__routes_table_empty.snap  snapshot_tests__routes_table_with_tags.snap  snapshot_tests__shutdown_complete.snap  snapshot_tests__shutdown_progress.snap  snapshot_tests__test_results_mixed.snap  snapshot_tests__test_results_passing.snap  snapshot_tests__validation_error_multi.snap  snapshot_tests__validation_error_nested.snap  snapshot_tests__validation_error_single.snap
crates/fastapi-router/: Cargo.toml
crates/fastapi-router/src/: lib.rs  match.rs  trie.rs
crates/fastapi-types/: Cargo.toml
crates/fastapi-types/src/: lib.rs
crates/fastapi/examples/: README.md  auth_example.rs  crud_api.rs  demo_api.rs  getting_started.rs  hello_world.rs
crates/fastapi/src/: lib.rs
docs/: getting-started.md
docs/guide/: index.md  openapi.md
