[workspace]
resolver = "2"
members = [
    # "crates/fastapi",  # Disabled - fastapi-router Route struct has missing fields
    "crates/fastapi-core",
    "crates/fastapi-http",
    "crates/fastapi-router",
    "crates/fastapi-macros",
    "crates/fastapi-openapi",
    "crates/fastapi-output",  # Re-enabled - rich_rust path fixed (bd-3jgt)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Runtime (our own) - uses git for CI; override with path in .cargo/config.toml for local dev
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync.git" }

# Serialization (only these)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates
fastapi = { path = "crates/fastapi" }
fastapi-core = { path = "crates/fastapi-core" }
fastapi-http = { path = "crates/fastapi-http" }
fastapi-router = { path = "crates/fastapi-router" }
fastapi-macros = { path = "crates/fastapi-macros" }
fastapi-openapi = { path = "crates/fastapi-openapi" }
fastapi-output = { path = "crates/fastapi-output" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these during early development
doc_markdown = "allow"
missing_const_for_fn = "allow"
doc_link_with_quotes = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
