[workspace]
resolver = "2"
members = [
    "crates/fastapi",
    "crates/fastapi-core",
    "crates/fastapi-http",
    "crates/fastapi-router",
    "crates/fastapi-macros",
    "crates/fastapi-openapi",
    "crates/fastapi-types",
    "crates/fastapi-output",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/Dicklesworthstone/fastapi_rust"
homepage = "https://github.com/Dicklesworthstone/fastapi_rust"

[workspace.dependencies]
# Runtime (our own) - override with path in .cargo/config.toml for local dev
asupersync = "0.1.0"

# Serialization (only these)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates
fastapi_rust = { path = "crates/fastapi", version = "0.1.2", package = "fastapi-rust" }
fastapi-core = { path = "crates/fastapi-core", version = "0.1.1" }
fastapi-http = { path = "crates/fastapi-http", version = "0.1.1" }
fastapi-router = { path = "crates/fastapi-router", version = "0.1.1" }
fastapi-macros = { path = "crates/fastapi-macros", version = "0.1.1" }
fastapi-openapi = { path = "crates/fastapi-openapi", version = "0.1.1" }
fastapi-types = { path = "crates/fastapi-types", version = "0.1.1" }
fastapi-output = { path = "crates/fastapi-output", version = "0.1.1" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these during early development
doc_markdown = "allow"
missing_const_for_fn = "allow"
doc_link_with_quotes = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
