[package]
name = "fastapi-core"
description = "Core types and traits for the FastAPI Rust framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"

# Testing utilities (used by TestClient for sync execution)
futures-executor = "0.3"

# Optional regex support for testing assertions
regex = { version = "1.12", optional = true }

[features]
default = []
# Enable regex support in testing assertions
regex = ["dep:regex"]

[lints]
workspace = true
