[package]
name = "fastapi-core"
description = "Core types and traits for the FastAPI Rust framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"

# Testing utilities (used by TestClient for sync execution)
futures-executor = "0.3"

# Optional regex support for testing assertions
regex = { version = "1", optional = true }

# Optional compression support (gzip)
flate2 = { version = "1.1", optional = true }

[features]
default = []
# Enable regex support in testing assertions
regex = ["dep:regex"]
# Enable response compression middleware
compression = ["dep:flate2"]

[dev-dependencies]
fastapi-macros = { path = "../fastapi-macros" }
regex = "1"
serial_test = "2"

[lints]
workspace = true
