[package]
name = "fastapi-macros"
description = "Procedural macros for fastapi_rust"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
# Used at compile time to validate regex patterns in #[validate(regex = "...")]
regex = "1"
# Used at compile time to validate JSON examples in #[schema(example = "...")]
serde_json = "1"

[lints]
workspace = true
