[package]
name = "fastapi-output"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent-aware rich console output for fastapi_rust"
repository = "https://github.com/Dicklesworthstone/fastapi_rust"
keywords = ["fastapi", "console", "terminal", "rich", "output"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
# Core terminal detection (always needed)
crossterm = "0.28"
regex = "1"
unicode-width = "0.2"

# Rich output library (optional)
rich_rust = { path = "/dp/rich_rust", optional = true }

[features]
default = ["rich"]
rich = ["dep:rich_rust"]
full = ["rich", "rich_rust/full"]

[dev-dependencies]
# For testing
serial_test = "3.2"
proptest = "1"

[lints]
workspace = true
