[package]
name = "fastapi-rust"
description = "Ultra-optimized Rust web framework inspired by FastAPI"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/fastapi-rust"
readme = "../../README.md"
keywords = ["fastapi", "web", "framework", "http", "async"]
categories = ["web-programming", "web-programming::http-server", "asynchronous"]

[lib]
name = "fastapi_rust"

[dependencies]
fastapi-core = { workspace = true }
fastapi-http = { workspace = true }
fastapi-router = { workspace = true }
fastapi-macros = { workspace = true }
fastapi-openapi = { workspace = true }
fastapi-output = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["output"]
output = ["dep:fastapi-output", "fastapi-output/rich"]
output-plain = ["dep:fastapi-output"]
full = ["output", "fastapi-output/full"]

[lints]
workspace = true
